feat: :sparkles: se crean los estilos base para componentes button
-se crean los estilos base para el patron de diseño 7-1 de Sass
-se crean los estilos base para el componente Button (aun no estan optimizados)

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,1 +1,6 @@
-*{background: #b6b6b6;}
+@use "./abstracts/variables";
+
+//components
+@use "./abstracts/mixins/index";
+@use "./components/ui/button";
+
