--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,6 +1,6 @@
 @use "./abstracts/variables";
 
 //components
-@use "./abstracts/mixins/index";
+@use "./abstracts/mixins";
 @use "./components/ui/button";
 
